# my-agent

./: .env.example  .gitignore  README.md  cleanup.sh  deploy.sh  main.py  pyproject.toml  start.sh
agent/: core.py  desktop.py  llm_client.py  memory.py  pipeline.py  safety.py  skills.py  vision.py
crypto-analysis/: test_binance_oi.py
tools/: builtin.py  desktop_tools.py  memory_tools.py  registry.py  skill_tools.py
