[project]
name = "xingjun-agent"
version = "0.1.0"
description = "星骏 — 从零造的 AI Agent 框架"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "openai>=2.33.0",
    "pillow>=12.2.0",
    "pyautogui>=0.9.54",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
]
